<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">chinmay_s_application6</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_thu">THU</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_next">Next</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? Register</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="msg_you_spent_4h_on">You spent 4h on Instagram today</string>
    <string name="msg_enter_old_passw">Enter old password</string>
    <string name="lbl_home">Home</string>
    <string name="msg_change_account">Change account name</string>
    <string name="msg_already_have_an">Already have an account? Login</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_today_at_08_15">Today At 08:15</string>
    <string name="msg_please_hold_you">Please hold your finger at the fingerprint scanner to verify your identity</string>
    <string name="msg_you_can_organiz">You can organize your daily tasks by adding your tasks into separate categories</string>
    <string name="lbl_5h">5h</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_work">Work</string>
    <string name="lbl_3h_30m">3h 30m</string>
    <string name="msg_manage_your_tas">Manage your tasks</string>
    <string name="lbl_create_new">Create New</string>
    <string name="lbl_february">FEBRUARY</string>
    <string name="lbl_focus">Focus</string>
    <string name="lbl_task_time">Task Time :</string>
    <string name="lbl_this_week">This Week</string>
    <string name="lbl_social">Social</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_wed">WED</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_family">Family</string>
    <string name="lbl_sun">SUN</string>
    <string name="lbl_today_at_16_45">Today At 16:45</string>
    <string name="lbl_tack_picture">Tack picture</string>
    <string name="lbl_task_priority">Task Priority</string>
    <string name="lbl_4h">4h</string>
    <string name="msg_login_with_goog">Login with Google</string>
    <string name="lbl_index">Index</string>
    <string name="msg_you_can_easily">You can easily manage all of your daily tasks in DoMe for free</string>
    <string name="lbl_app_settings">App Settings</string>
    <string name="msg_change_app_lang">Change app language</string>
    <string name="lbl_task_category">Task Category :</string>
    <string name="msg_you_spent_45m_o">You spent 45m on Gmail today</string>
    <string name="msg_change_app_colo">Change app color</string>
    <string name="lbl_edit_time">Edit Time</string>
    <string name="lbl_stop_focusing">Stop Focusing</string>
    <string name="msg_are_you_sure_yo">Are You sure you want to delete this task?
Task title : Do math homework</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_2022">2022</string>
    <string name="lbl_mahsa_esfehany">Mahsa Esfehany</string>
    <string name="lbl_3h">3h</string>
    <string name="lbl_delete_task">Delete Task</string>
    <string name="lbl_martha_hays">Martha Hays</string>
    <string name="lbl_design">Design</string>
    <string name="lbl_1h">1h</string>
    <string name="lbl_tack_out_dogs">Tack out dogs</string>
    <string name="lbl_30">30</string>
    <string name="lbl_university">University</string>
    <string name="lbl_31">31</string>
    <string name="msg_tap_to_add_yo">Tap + to add your tasks</string>
    <string name="lbl_sub_task">Sub - Task</string>
    <string name="lbl_completed">Completed</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_buy_grocery">Buy Grocery</string>
    <string name="lbl_fri">FRI</string>
    <string name="lbl_5_task_done">5 Task done</string>
    <string name="lbl_4h_30m">4h 30m</string>
    <string name="msg_search_for_your">Search for your task...</string>
    <string name="lbl_sport">Sport</string>
    <string name="msg_enter_new_passw">Enter new password</string>
    <string name="lbl_faq">FAQ</string>
    <string name="lbl_mon">MON</string>
    <string name="lbl_category_name2">Category name</string>
    <string name="msg_do_math_homewor2">Do math homework</string>
    <string name="lbl_2h">2h</string>
    <string name="lbl_create_category">Create Category</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_tue">TUE</string>
    <string name="msg_you_spent_30m_o">You spent 30m on Telegram today</string>
    <string name="lbl_twitter">Twitter</string>
    <string name="msg_do_math_homewor">Do Math Homework</string>
    <string name="lbl_20">20</string>
    <string name="lbl_23">23</string>
    <string name="lbl_24">24</string>
    <string name="lbl_21">21</string>
    <string name="msg_your_fingerprin">Your fingerprint is not matched.Please try again later!!!</string>
    <string name="lbl_22">22</string>
    <string name="lbl_27">27</string>
    <string name="lbl_28">28</string>
    <string name="lbl_25">25</string>
    <string name="msg_create_new_cate">Create new category</string>
    <string name="lbl_start_focusing">Start Focusing</string>
    <string name="lbl_26">26</string>
    <string name="msg_you_spent_3h_on">You spent 3h on Twitter today</string>
    <string name="lbl_add_sub_task">Add Sub - Task</string>
    <string name="lbl_calendar">Calendar</string>
    <string name="lbl_applications">Applications</string>
    <string name="lbl_edit_task">Edit Task</string>
    <string name="lbl_overview">Overview</string>
    <string name="lbl_choose_time">Choose Time</string>
    <string name="lbl_create_account">Create account</string>
    <string name="lbl_uptodo2">Uptodo</string>
    <string name="lbl_about_us">About US</string>
    <string name="lbl_today">Today</string>
    <string name="msg_category_color">Category color :</string>
    <string name="lbl_focus_mode">Focus Mode</string>
    <string name="lbl_telegram">Telegram</string>
    <string name="lbl_default">Default</string>
    <string name="msg_import_from_goo">Import from Google Drive</string>
    <string name="lbl_task_priority2">Task Priority :</string>
    <string name="msg_register_with_a">Register with Appe</string>
    <string name="lbl_sat">SAT</string>
    <string name="lbl_login2">Login</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="lbl_10">10</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_11">11</string>
    <string name="lbl_16">16</string>
    <string name="msg_register_with_g">Register with Google</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="lbl_uptodo">UpTodo</string>
    <string name="lbl_15">15</string>
    <string name="lbl_facebook">Facebook</string>
    <string name="lbl_import">Import</string>
    <string name="lbl_18">18</string>
    <string name="lbl_use_password">Use Password</string>
    <string name="lbl_help_feedback">Help &amp; Feedback</string>
    <string name="lbl_19">19</string>
    <string name="lbl_add_category">Add Category</string>
    <string name="lbl_skip">Skip</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_30_18">30:18</string>
    <string name="msg_orgonaize_your">Orgonaize your tasks</string>
    <string name="lbl">:</string>
    <string name="lbl_am">AM</string>
    <string name="lbl_register">Register</string>
    <string name="msg_business_meetin">Business meeting with CEO</string>
    <string name="lbl_save">Save</string>
    <string name="msg_choose_icon_fro">Choose icon from library</string>
    <string name="lbl_today_at_18_20">Today At 18:20</string>
    <string name="lbl_focuse">Focuse</string>
    <string name="msg_please_login_to">Please login to your account or create new account to continue</string>
    <string name="msg_what_do_you_wan">What do you want to do today?</string>
    <string name="msg_while_your_focu">While your focus mode is on, all of your notifications will be off</string>
    <string name="lbl_pm">PM</string>
    <string name="lbl_2h_30m">2h 30m</string>
    <string name="lbl_support_us">Support US</string>
    <string name="lbl_1">1</string>
    <string name="msg_edit_task_prior">Edit Task Priority</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_4">4</string>
    <string name="lbl_5">5</string>
    <string name="lbl_6">6</string>
    <string name="msg_welcome_to_upto">Welcome to UpTodo</string>
    <string name="lbl_7">7</string>
    <string name="lbl_8">8</string>
    <string name="lbl_5h2">5H</string>
    <string name="lbl_9">9</string>
    <string name="lbl_09">09</string>
    <string name="lbl_07">07</string>
    <string name="lbl_08">08</string>
    <string name="lbl_instagram">Instagram</string>
    <string name="lbl_login">LOGIN</string>
    <string name="msg_enter_your_user">Enter your Username</string>
    <string name="lbl_health">Health</string>
    <string name="lbl_music">Music</string>
    <string name="lbl_category_icon">Category icon :</string>
    <string name="lbl_00_00">00:00</string>
    <string name="lbl_movie">Movie</string>
    <string name="msg_change_account4">Change account Password</string>
    <string name="lbl_login_with_appe">Login with Appe</string>
    <string name="msg_change_app_typo">Change app typography</string>
    <string name="msg_import_from_goo2">Import from Google calendar</string>
    <string name="lbl_10_task_left">10 Task left</string>
    <string name="msg_change_account2">Change account password</string>
    <string name="msg_change_account3">Change account Image</string>
    <string name="lbl_category_name">Category name :</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_or">or</string>
    <string name="lbl_choose_category">Choose Category</string>
    <string name="lbl_edit_task_title">Edit Task title</string>
    <string name="msg_import_from_gal">Import from gallery</string>
    <string name="msg_you_spent_1h_on">You spent 1h on Facebbok today</string>
    <string name="msg_in_uptodo_you">In Uptodo  you can create your personalized routine to stay productive</string>
    <string name="msg_do_chapter_2_to">Do chapter 2 to 5 for next week</string>
    <string name="lbl_grocery">Grocery</string>
    <string name="lbl_gmail">Gmail</string>
    <string name="lbl_add_task">Add Task</string>
    <string name="lbl_6h">6h</string>
    <string name="msg_create_daily_ro">Create daily routine</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_this_contact_has_no_phone_nu">This contact has no phone number</string>
    <string name="msg_camera_storage_permission">This Application need permission\n1.Camera permission to capture the image.\n2.Storage Access permission to save the captured image.</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
</resources>
