<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="startScreenVM" type="com.chinmaysapplication.app.modules.startscreen.data.viewmodel.StartScreenVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumnlocation"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_901">
        <ImageView android:id="@+id/imageLocation"
            android:layout_gravity="start"
            android:layout_height="@dimen/_17pxh"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="@dimen/_8pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_location"
            tools:ignore="ContentDescription" tools:src="@drawable/img_location"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtWelcometoUpTo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_63pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{startScreenVM.startScreenModel.txtWelcometoUpTo}"
            style="@style/txtLatobold32" tools:text="@string/msg_welcome_to_upto"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtPleaseloginto"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:text="@{startScreenVM.startScreenModel.txtPleaseloginto}"
            style="@style/txtLatoregular16_4" tools:text="@string/msg_please_login_to"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_371pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolidRounded_1" tools:text="@string/lbl_login"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnCreateAccount"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_create_account"
            android:textAllCaps="true"
            style="@style/btnRoundedOutline_1" tools:text="@string/lbl_create_account"/>
    </LinearLayout>
</layout>
