<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="onboadingTwoVM" type="com.chinmaysapplication.app.modules.onboadingtwo.data.viewmodel.OnboadingTwoVM"/>
    </data>
    <FrameLayout android:id="@+id/frameOnboadingTwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylegray_901">
        <LinearLayout android:id="@+id/linearColumnskip"
            android:layout_gravity="top|center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_16pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtSkip"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{onboadingTwoVM.onboadingTwoModel.txtSkip}"
                android:textAllCaps="true"
                style="@style/txtLatoregular16_3" tools:text="@string/lbl_skip"/>
            <ImageView android:id="@+id/imageGroup182"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_277pxh"
                android:layout_marginEnd="@dimen/_29pxh"
                android:layout_marginStart="@dimen/_29pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="@dimen/_213pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_group182"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group182"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowrectangle100"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_29pxh"
                android:layout_marginStart="@dimen/_29pxh"
                android:layout_marginTop="@dimen/_51pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <View
                    android:background="@drawable/rectangle_bg_white_a700_dd_radius_2"
                    android:id="@+id/viewRectangle100"
                    android:layout_height="@dimen/_4pxv" android:layout_width="@dimen/_26pxh"/>
                <View
                    android:background="@drawable/rectangle_bg_gray_400_radius_2"
                    android:id="@+id/viewRectangle101"
                    android:layout_height="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_8pxh" android:layout_width="@dimen/_26pxh"/>
                <View
                    android:background="@drawable/rectangle_bg_gray_400_radius_2"
                    android:id="@+id/viewRectangle102"
                    android:layout_height="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_7pxh" android:layout_width="@dimen/_26pxh"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtManageyourtas"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_29pxh"
                android:layout_marginStart="@dimen/_29pxh"
                android:layout_marginTop="@dimen/_52pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{onboadingTwoVM.onboadingTwoModel.txtManageyourtas}"
                style="@style/txtLatobold32" tools:text="@string/msg_manage_your_tas"/>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtYoucaneasily"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_29pxh"
                android:layout_marginStart="@dimen/_29pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent"
                android:text="@{onboadingTwoVM.onboadingTwoModel.txtYoucaneasily}"
                style="@style/txtLatoregular16" tools:text="@string/msg_you_can_easily"/>
            <LinearLayout android:id="@+id/linearRowback"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_108pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBack"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_weight="0.32"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{onboadingTwoVM.onboadingTwoModel.txtBack}"
                    android:textAllCaps="true"
                    style="@style/txtLatoregular16_3" tools:text="@string/lbl_back"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnNext"
                    android:layout_height="@dimen/_48pxv"
                    android:layout_marginStart="@dimen/_194pxh"
                    android:layout_width="@dimen/_90pxh"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_24pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_next"
                    android:textAllCaps="true"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_next"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
