<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileChangeProfileImageVM" type="com.chinmaysapplication.app.modules.profilechangeprofileimage.data.viewmodel.ProfileChangeProfileImageVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearProfilechang"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnchangeaccount"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylebluegray_2">
            <TextView android:ellipsize="end"
                android:id="@+id/txtChangeaccount"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{profileChangeProfileImageVM.profileChangeProfileImageModel.txtChangeaccount}"
                style="@style/txtLatobold16" tools:text="@string/msg_change_account3"/>
            <View android:background="@color/gray_500"
                android:id="@+id/lineDivider"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_31pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_312pxh"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumntackpicture"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtTackpicture"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{profileChangeProfileImageVM.profileChangeProfileImageModel.txtTackpicture}"
                    style="@style/txtLatoregular16" tools:text="@string/lbl_tack_picture"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnimportfromgal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtImportfromgal"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{profileChangeProfileImageVM.profileChangeProfileImageModel.txtImportfromgal}"
                    style="@style/txtLatoregular16" tools:text="@string/msg_import_from_gal"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnimportfromgoo"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_28pxv"
                android:layout_width="wrap_content"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtImportfromGoo"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{profileChangeProfileImageVM.profileChangeProfileImageModel.txtImportfromGoo}"
                    style="@style/txtLatoregular16" tools:text="@string/msg_import_from_goo"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
